# c3-lcs

./: .bazelproject  .bazelrc  .gitignore  LICENSE  WORKSPACE  WORKSPACE~  bazel-bin  bazel-c3-lcs  bazel-out  bazel-testlogs  environ.bzl  execute_vis_sim_c3.bash
bindings/pydairlib/lcm/: BUILD.bazel  lcm_py_bind_cpp_serializers.cc  lcm_trajectory_py.cc
bindings/pydairlib/lcm/visualization/: BUILD.bazel
bindings/pydairlib/multibody/: BUILD.bazel
examples/franka/: .franka_osc_controller.cc.swp  BUILD.bazel  franka_c3_controller.cc  franka_hardware.pmd  franka_sim.pmd
examples/franka/parameters/c3_options/: franka_c3_options_wall.yaml
examples/franka/systems/: franka_kinematics_vector.h
examples/pushbot/: BUILD.bazel  c3_unit_test.cc  check_urdf.py  lcm_channels_simulation.yaml  pushbot_c3_controller.cc  pushbot_lcm_channels.h  pushbot_llc_controller.cc  pushbot_osc_controller.cc  pushbot_robot_controller.cc  pushbot_sim.cc  pushbot_sim.pmd  pushbot_visualizer.cc
examples/pushbot/parameters/: c3_options.yaml  lcm_channels_simulation.yaml  pushbot_c3_controller_params.h  pushbot_c3_controller_params.yaml  pushbot_lcm_channels.h  pushbot_osc_controller_params.h  pushbot_sim_params.h  pushbot_sim_params.yaml  pushbot_sim_scene_params.h  scene.yaml
examples/pushbot/systems/: BUILD.bazel  abstract_to_vector.cc  c3_state_sender.cc  c3_trajectory_generator.cc  c3soln_to_command.cc  c3soln_to_command.h  pushbot_kinematics.cc  pushbot_kinematics.h  pushbot_kinematics_vector.cc  pushbot_kinematics_vector.h
examples/pushbot/urdf/: pushbot.urdf  wall.urdf
lcm/: BUILD.bazel
multibody/: BUILD.bazel
multibody/kinematic/: BUILD.bazel
solvers/: BUILD.bazel  c3.cc  c3_miqp.cc  c3_options.h
systems/: robot_lcm_systems.cc
systems/controllers/: BUILD.bazel  BUILD.bazel~  simple_controller.cc  simple_controller.h
systems/controllers/c3/: c3_controller.cc
systems/framework/: BUILD.bazel
systems/trajectory_optimization/: BUILD.bazel  BUILD.bazel~  c3_output_systems.cc  test_util.cc  test_util.cc~
systems/visualization/: BUILD.bazel  lcm_visualization_systems.cc
tools/: bazel
