# -*- mode: python -*-
# vi: set ft=python :

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "urdfs",
    data = glob([
        "urdf/**",
    ]),
)


cc_binary(
    name = "pushbot_visualizer",
    srcs = ["pushbot_visualizer.cc"],
    data = [
        ":urdfs",
    ],
    deps = [
        ":parameters",
        "//common",
        "//multibody:utils",
        "//multibody:visualization_utils",
        "//systems:robot_lcm_systems",
        "//systems:system_utils",
        "//systems/trajectory_optimization:lcm_trajectory_systems",
        "//systems/visualization:lcm_visualization_systems",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)

cc_binary(
    name = "pushbot_osc_controller",
    srcs = ["pushbot_osc_controller.cc"],
    data = [
        ":urdfs",
    ],
    deps = [
        ":parameters",
        "//common",
        "//examples/pushbot/systems:pushbot_systems",
        "//lcm:lcm_trajectory_saver",
        "//systems:robot_lcm_systems",
        "//systems:system_utils",
        "//systems/controllers",
        "//systems/controllers/osc:operational_space_control",
        "//systems/framework:lcm_driven_loop",
        "//systems/primitives:radio_parser",
        "//systems/trajectory_optimization:lcm_trajectory_systems",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)

cc_binary(
    name = "pushbot_c3_controller",
    srcs = ["pushbot_c3_controller.cc"],
    data = [
        ":urdfs",
    ],
    deps = [
        ":parameters",
        "//common",
        "//examples/pushbot/systems:pushbot_systems",
        "//lcm:lcm_trajectory_saver",
        "//systems:robot_lcm_systems",
        "//systems/controllers",
        "//systems/controllers:c3_controller",
        "//systems/controllers:lcs_factory_system",
        "//systems/controllers/osc:operational_space_control",
        "//systems/framework:lcm_driven_loop",
        "//systems/primitives:radio_parser",
        "//systems/trajectory_optimization:c3_output_systems",
        "//systems:system_utils",
        "//systems/trajectory_optimization:lcm_trajectory_systems",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)

cc_binary(
    name = "pushbot_sim",
    srcs = ["pushbot_sim.cc"],
    data = [
        ":urdfs",
    ],
    deps = [
        ":parameters",
        "//common",
        "//examples/pushbot/systems:pushbot_systems",
        "//systems:robot_lcm_systems",
        "//systems:system_utils",
        "//systems/controllers",
        "//systems/framework:lcm_driven_loop",
        "//systems/primitives:radio_parser",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)

cc_library(
    name = "parameters",
    hdrs = [
        "parameters/pushbot_lcm_channels.h",
        "parameters/pushbot_sim_scene_params.h",
        "parameters/pushbot_sim_params.h",
        "parameters/pushbot_osc_controller_params.h",
        "parameters/pushbot_c3_controller_params.h"
    ],
    data = glob([
        "*yaml",
    ]),
    deps = [
        "@drake//:drake_shared_library",
    ],
)
