package(default_visibility = ["//visibility:public"])

cc_library(
    name = "pushbot_systems",
    srcs = [],
    deps = [
        ":c3_state_sender",
        ":c3_trajectory_generator",
        ":external_force_generator",
	":pushbot_kinematics",
    ],
)

cc_library(
    name = "external_force_generator",
    srcs = ["external_force_generator.cc"],
    hdrs = ["external_force_generator.h"],
    deps = [
        "//lcmtypes:lcmt_robot",
        "//multibody:utils",
        "//systems/framework:vector",
        "@drake//:drake_shared_library",
        "@lcm",
    ],
)

cc_library(
    name = "c3_trajectory_generator",
    srcs = [
        "c3_trajectory_generator.cc",
    ],
    hdrs = [
        "c3_trajectory_generator.h",
    ],
    deps = [
    	":pushbot_kinematics",
        "//common:find_resource",
        "//lcm:lcm_trajectory_saver",
        "//lcmtypes:lcmt_robot",
        "//multibody:utils",
        "//solvers:c3",
        "//solvers:c3_output",
        "//solvers:solver_options_io",
        "//systems/framework:vector",
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "c3_state_sender",
    srcs = [
        "c3_state_sender.cc",
    ],
    hdrs = [
        "c3_state_sender.h",
    ],
    deps = [
        "//lcmtypes:lcmt_robot",
        "//systems/framework:vector",
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "pushbot_kinematics",
    srcs = ["pushbot_kinematics.cc"],
    hdrs = ["pushbot_kinematics.h"],
    deps = [
    	":pushbot_kinematics_vector",
	"//common",
        "//lcmtypes:lcmt_robot",
        "//multibody:utils",
	"//systems/primitives",
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "pushbot_kinematics_vector",
    srcs = ["pushbot_kinematics_vector.cc"],
    hdrs = ["pushbot_kinematics_vector.h"],
    deps = [
	"//common",
        "//multibody:utils",
	"//systems/primitives",
        "@drake//:drake_shared_library",
    ],
)
