# -*- python -*-
load("@drake//tools/install:install.bzl", "install")

package(default_visibility = ["//visibility:public"])

load(
    "@drake//tools/skylark:pybind.bzl",
    "drake_pybind_library",
    "get_drake_py_installs",
    "get_pybind_package_info",
    "pybind_py_library",
)

py_binary(
    name = "lcm_trajectory_plotter",
    srcs = ["lcm_trajectory_plotter.py"],
    deps = [
        "//bindings/pydairlib/lcm",
        "//lcmtypes:lcmtypes_robot_py",
    ],
)

py_library(
    name = "visualize_params",
    srcs = ["visualize_params.py"],
    deps = [],
)
